--- a/web/static/style.css
+++ b/web/static/style.css
@@ -16,3 +16,7 @@ h1 {
     border-bottom: 1px dotted #666;
     font-family: 'Times New Roman', Times, serif;
 }
+
+code {
+    white-space: pre;
+}
