added basic info of formats

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -71,6 +71,15 @@
 			</div>
 		</div>
 		{{end}}
+
+		<ul class="mt-5">
+			<li>
+				Short Payment Descriptor is a format used in Czech Republic and Slovak Republic.
+			</li>
+			<li>
+				EPC QR code is a format used in some EU countries (Germany, Austria, Belgium, Finland and The Netherlands).
+			</li>
+		</ul>
 	</div>
 
 </body>
